@@ -14,6 +14,7 @@ INSTL_STEP_DATABASE_LABEL="Database"
 INSTL_STEP_FTP_LABEL="FTP"
 INSTL_STEP_SITE_LABEL="Configuration"
 INSTL_STEP_COMPLETE_LABEL="Finish"
+INSTL_STEP_SUMMARY_LABEL="Overview"
 
 ;Language view
 INSTL_LANGUAGE_TITLE="Choose language"
@@ -25,7 +26,7 @@ INSTL_WARNJSON="Your PHP installation needs to have JSON enabled for Joomla to b
 ;Preinstall view
 INSTL_PRECHECK_TITLE="Pre-Installation Check"
 INSTL_PRECHECK_FOR_VERSION="Pre-installation check for %s:"
-INSTL_PRECHECK_DESC="If any of these items is not supported (marked as <strong class="_QQ_"red"_QQ_">No</strong>) then please take actions to correct them. Failure to do so could lead to your Joomla! installation not functioning correctly."
+INSTL_PRECHECK_DESC="If any of these items is not supported (marked as <strong class="_QQ_"red"_QQ_">No</strong>) then please take actions to correct them.<br />You cannot install Joomla! untill your setup meets below requirements."
 INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Recommended settings:"
 INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="These settings are recommended for PHP in order to ensure full compatibility with Joomla.<br />However, Joomla! will still operate if your settings do not quite match the recommended configuration."
 INSTL_PRECHECK_DIRECTIVE="Directive"
@@ -86,13 +87,35 @@ INSTL_SITE_METADESC_LABEL="Description"
 INSTL_SITE_METADESC_TITLE_LABEL="Enter a description of the overall Web site that is to be used by search engines. Generally, a maximum of 20 words is optimal."
 INSTL_SITE_OFFLINE_LABEL="Site Offline"
 INSTL_SITE_OFFLINE_TITLE_LABEL="Set the site frontend offline when installation is completed. The site can be set online later on through the Global Configuration."
-INSTL_SITE_SAMPLE_LABEL="Sample Data set"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Install Sample Data"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Installing sample data is strongly recommended for beginners.<br />This will install sample content that is included in the Joomla! installation package."
+INSTL_SITE_INSTALL_SAMPLE_NONE="None"
 INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
 INSTL_SAMPLE_BLOG_SET="Blog English (GB) Sample Data"
 INSTL_SAMPLE_BROCHURE_SET="Brochure English (GB) Sample Data"
 INSTL_SAMPLE_TESTING_SET="Test English (GB) Sample Data"
+
+;Summary view
+INSTL_FINALISATION="Finalisation"
+INSTL_SUMMARY_INSTALL="Install"
+INSTL_SUMMARY_EMAIL_LABEL="Email Configuration"
+INSTL_SUMMARY_EMAIL_DESC="Select to email below configuration settings to %s after installation."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Include Passwords in Email"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="Warning! It is recommended to not send and store your passwords in emails."
+
+;Installing view
+INSTL_INSTALLING="Installing..."
+INSTL_INSTALLING_DATABASE_BACKUP="Backing up old database tables"
+INSTL_INSTALLING_DATABASE_REMOVE="Removing old database tables"
+INSTL_INSTALLING_DATABASE="Creating database tables"
+INSTL_INSTALLING_SAMPLE="Installing sample data"
+INSTL_INSTALLING_CONFIG="Creating configuration File"
+INSTL_INSTALLING_EMAIL="Sending email to %s"
+
+;Email
+INSTL_EMAIL_SUBJECT="Configuration Details: %s"
+INSTL_EMAIL_HEADING="Below you can find the configuration settings for a newly setup Joomla! website:"
+INSTL_EMAIL_NOT_SENT="Email could not be sent."
 
 ;Complete view
 INSTL_COMPLETE="Finish"
@@ -106,7 +129,7 @@ INSTL_COMPLETE_FOLDER_REMOVED="Installation folder successfully removed"
 INSTL_COMPLETE_LANGUAGE_1="Joomla! in your own language?"
 INSTL_COMPLETE_LANGUAGE_2="Visit the Joomla! Community Site for language packs downloads."
 INSTL_COMPLETE_REMOVE_FOLDER="Remove installation folder"
-INSTL_COMPLETE_REMOVE_INSTALLATION="PLEASE REMEMBER TO COMPLETELY<br />REMOVE THE INSTALLATION FOLDER.<br />You will not be able to proceed beyond this point until the installation directory has been removed. This is a security feature of Joomla!."
+INSTL_COMPLETE_REMOVE_INSTALLATION="PLEASE REMEMBER TO COMPLETELY REMOVE THE INSTALLATION FOLDER.<br />You will not be able to proceed beyond this point until the installation directory has been removed. This is a security feature of Joomla!."
 INSTL_COMPLETE_TITLE="Congratulations! Joomla! is now installed."
 
 ;Database Model
@@ -173,7 +196,7 @@ INSTL_GNU_GPL_LICENSE="GNU General Public License"
 INSTL_INSTALLATION="Installation"
 INSTL_JSON_SUPPORT_AVAILABLE="JSON Support"
 INSTL_LICENSE="License"
-INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC Off"
 INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
 INSTL_MB_LANGUAGE_IS_DEFAULT="MB Language is Default"
 INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload Off"
@@ -183,7 +206,7 @@ INSTL_NOTICEYOUCANSTILLINSTALL="<br />You can still continue the installation as
 INSTL_OUTPUT_BUFFERING="Output Buffering"
 INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser Support"
 INSTL_PHP_VERSION="PHP Version"
-INSTL_REGISTER_GLOBALS="Register Globals"
+INSTL_REGISTER_GLOBALS="Register Globals Off"
 INSTL_SAFE_MODE="Safe Mode"
 INSTL_SESSION_AUTO_START="Session Auto Start"
 INSTL_WRITABLE="Writeable"
@@ -197,10 +220,12 @@ JADMINISTRATOR="Administrator"
 JADVANCED="Advanced"
 JCHECK_AGAIN="Check Again"
 JERROR="Error"
-JGLOBAL_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JEMAIL="Email"
+JGLOBAL_ISFREESOFTWARE="%s is free software released under the %s."
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
 JNEXT="Next"
 JNO="No"
+JNOTICE="Notice"
 JOFF="Off"
 JON="On"
 JPREVIOUS="Previous"
@@ -209,6 +234,7 @@ JUSERNAME="Username"
 JYES="Yes"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_DATABASE="A Database error occurred."
 JLIB_DATABASE_ERROR_CONNECT_MYSQL="Could not connect to MySQL."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Unable to load Database Driver: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Your session has expired, please reload the page."
