@@ -87,16 +87,16 @@ INSTL_SITE_METADESC_LABEL="Description"
 INSTL_SITE_METADESC_TITLE_LABEL="Enter a description of the overall Web site that is to be used by search engines. Generally, a maximum of 20 words is optimal."
 INSTL_SITE_OFFLINE_LABEL="Site Offline"
 INSTL_SITE_OFFLINE_TITLE_LABEL="Set the site frontend offline when installation is completed. The site can be set online later on through the Global Configuration."
-INSTL_SITE_SAMPLE_LABEL="Sample Data set"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Install Sample Data"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Installing sample data is strongly recommended for beginners.<br />This will install sample content that is included in the Joomla! installation package."
+INSTL_SITE_INSTALL_SAMPLE_NONE="None"
 INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
 INSTL_SAMPLE_BLOG_SET="Blog English (GB) Sample Data"
 INSTL_SAMPLE_BROCHURE_SET="Brochure English (GB) Sample Data"
 INSTL_SAMPLE_TESTING_SET="Test English (GB) Sample Data"
 
 ;Summary view
-INSTL_FINALISATION="Finalization"
+INSTL_FINALISATION="Finalisation"
 INSTL_SUMMARY_INSTALL="Install"
 INSTL_SUMMARY_EMAIL_LABEL="Email Configuration"
 INSTL_SUMMARY_EMAIL_DESC="Select to email below configuration settings to %s after installation."
