@@ -54,6 +54,9 @@ class JFormFieldSample extends JFormFieldRadio
 		// Get a list of files in the search path with the given filter.
 		$files = JFolder::files(JPATH_INSTALLATION . '/sql/' . $type, '^sample.*\.sql$');
 
+		// Add option to not install sampledata.
+		$options[] = JHtml::_('select.option', '','INSTL_SITE_INSTALL_SAMPLE_NONE');
+
 		// Build the options list from the list of files.
 		if (is_array($files))
 		{
@@ -87,7 +90,7 @@ class JFormFieldSample extends JFormFieldRadio
 			}
 			else
 			{
-				$this->value = 'sample_data.sql';
+				$this->value = '';
 			}
 		}
 
