@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 18-Aug-2012 Jean-Marie Simonet
  # [#28929] *Frontend editing tabs does not work. Thanks Peter.
+ # [#28932] *Simplifying sample data install on 3.0 alpha2
 
 -------------------- 3.0 Alpha 2 Release [16-Aug-2012] ------------------
 
